@@ -51,14 +51,7 @@ evaluateTranslation <- function(formula, model, labelsData) {
 	} else if (len == 4 && identical(as.character(formula[1]), '[')) {
 		formula[-1] <- lapply(formula[-1], 
 			evaluateTranslation, model, labelsData)
-		# The order of the if/else-if matters
-		# as.matrix(x) should be invoked on A[,y] and A[,]
-		# t(as.matrix(x)) should be invoked on A[x,]
-		if (identical(as.character(formula[3]), '')) {
-			formula <- substitute(as.matrix(x), list(x = formula))
-		} else if (identical(as.character(formula[4]), '')) {
-			formula <- substitute(t(as.matrix(x)), list(x = formula))
-		}
+		formula$drop <- FALSE
 	} else {
 		formula[-1] <- lapply(formula[-1], 
 			evaluateTranslation, model, labelsData)
@@ -103,14 +96,7 @@ computeTranslation <- function(formula, model, labelsData) {
 	} else if (len == 4 && identical(as.character(formula[1]), '[')) {
 		formula[-1] <- lapply(formula[-1], 
 			computeTranslation, model, labelsData)
-		# The order of the if/else-if matters
-		# as.matrix(x) should be invoked on A[,y] and A[,]
-		# t(as.matrix(x)) should be invoked on A[x,]
-		if (identical(as.character(formula[3]), '')) {
-			formula <- substitute(as.matrix(x), list(x = formula))
-		} else if (identical(as.character(formula[4]), '')) {
-			formula <- substitute(t(as.matrix(x)), list(x = formula))
-		}
+		formula$drop <- FALSE
 	} else {
 		func <- get(as.character(formula[[1]]))
 		if(!is.primitive(func)) {
@@ -219,14 +205,7 @@ showTranslation <- function(formula, model, modelVariable, labelsData) {
 	} else if (len == 4 && identical(as.character(formula[1]), '[')) {
 		formula[-1] <- lapply(formula[-1], 
 			showTranslation, model, modelVariable, labelsData)
-		# The order of the if/else-if matters
-		# as.matrix(x) should be invoked on A[,y] and A[,]
-		# t(as.matrix(x)) should be invoked on A[x,]
-		if (identical(as.character(formula[3]), '')) {
-			formula <- substitute(as.matrix(x), list(x = formula))
-		} else if (identical(as.character(formula[4]), '')) {
-			formula <- substitute(t(as.matrix(x)), list(x = formula))
-		}
+		formula$drop <- FALSE
 	} else {
 		formula[-1] <- lapply(formula[-1], 
 			showTranslation, model, modelVariable, labelsData)
@@ -275,14 +254,7 @@ showEvaluation <- function(formula, model, modelVariable, labelsData) {
 	} else if (len == 4 && identical(as.character(formula[1]), '[')) {
 		formula[-1] <- lapply(formula[-1], 
 			showEvaluation, model, modelVariable, labelsData)
-		# The order of the if/else-if matters
-		# as.matrix(x) should be invoked on A[,y] and A[,]
-		# t(as.matrix(x)) should be invoked on A[x,]
-		if (identical(as.character(formula[3]), '')) {
-			formula <- substitute(as.matrix(x), list(x = formula))
-		} else if (identical(as.character(formula[4]), '')) {
-			formula <- substitute(t(as.matrix(x)), list(x = formula))
-		}
+		formula$drop <- FALSE
 	} else {
 		formula[-1] <- lapply(formula[-1], 
 			showEvaluation, model, modelVariable, labelsData)
