@@ -112,6 +112,14 @@ model <- mxModel(model, mxAlgebra(A[,'z'], name = 'test30o'))
 model <- mxModel(model, mxAlgebra(A[,zeta], name = 'test30p'))
 model <- mxModel(model, mxAlgebra(A[alpha,], name = 'test30q'))
 model <- mxModel(model, mxAlgebra(A[two,two], name = 'test30r'))
+model <- mxModel(model, mxAlgebra(A[1:3,], name = 'test30s'))
+model <- mxModel(model, mxAlgebra(A[,2:4], name = 'test30t'))
+model <- mxModel(model, mxAlgebra(A[cbind(1,1), cbind(2,2)], name = 'test30u'))
+model <- mxModel(model, mxAlgebra(A[-1:-3, -2], name = 'test30v'))
+model <- mxModel(model, mxAlgebra(A[-2:-4,3], name = 'test30w'))
+model <- mxModel(model, mxAlgebra(A[3, -2:-4], name = 'test30x'))
+model <- mxModel(model, mxAlgebra(A[cbind('a','b','c'), cbind('v','z')], name = 'test30y'))
+
 model <- mxModel(model, mxAlgebra(vech(D), name = 'test31a'))
 model <- mxModel(model, mxAlgebra(vech(E), name = 'test31b'))
 model <- mxModel(model, mxAlgebra(vechs(D), name = 'test32a'))
@@ -203,6 +211,13 @@ omxCheckCloseEnough(model[['test30o']]@result, mxEval(A[,'z'], model), 0.001)
 omxCheckCloseEnough(model[['test30p']]@result, mxEval(A[,zeta], model), 0.001)
 omxCheckCloseEnough(model[['test30q']]@result, mxEval(A[alpha,], model), 0.001)
 omxCheckCloseEnough(model[['test30r']]@result, mxEval(A[two,two], model), 0.001)
+omxCheckCloseEnough(model[['test30s']]@result, mxEval(A[1:3,], model), 0.001)
+omxCheckCloseEnough(model[['test30t']]@result, mxEval(A[,2:4], model), 0.001)
+omxCheckCloseEnough(model[['test30u']]@result, mxEval(A[cbind(1,1), cbind(2,2)], model), 0.001)
+omxCheckCloseEnough(model[['test30v']]@result, mxEval(A[-1:-3, -2], model), 0.001)
+omxCheckCloseEnough(model[['test30w']]@result, mxEval(A[-2:-4, 3], model), 0.001)
+omxCheckCloseEnough(model[['test30x']]@result, mxEval(A[3, -2:-4], model), 0.001)
+omxCheckCloseEnough(model[['test30y']]@result, mxEval(A[cbind('a','b','c'), cbind('v','z')], model), 0.001)
 omxCheckCloseEnough(model[['test31a']]@result, mxEval(as.matrix(vech(D)), model), 0.001)
 omxCheckCloseEnough(model[['test31b']]@result, mxEval(as.matrix(vech(E)), model), 0.001)
 omxCheckCloseEnough(model[['test32a']]@result, mxEval(as.matrix(vechs(D)), model), 0.001)
